--- a/_sass/classic/_layout.scss
+++ b/_sass/classic/_layout.scss
@@ -35,10 +35,10 @@
 }
 
 
-// The navigation & banner
-// Note: these two have to be together to enable a RWD design with an input/label in the banner area.
+// The navigation & banner (these two have to be together to enable a RWD design with an input/label in the banner area.)
+//
 .navbanner-panel {
-
+		
 	// Use the flex layout rules.
 	display: flex;
 	flex-direction: row;
@@ -57,262 +57,7 @@
 		align-items: center;
 	}
 
-	// The menu label is only visible in narrow and medium layout.
-	.navbanner-label {
-		
-		// Never grow the menu label (symbol)
-		flex-grow: 0;
-
-		// The menu label (symbol) should be centered if visible
-		@if ($navbanner-include-banner == true) { display: flex; } @else { display: none }
-		justify-content: center;
-		align-items: center;
-
-		// The label is used as checkbox-label, it should show a pointer when the mouse is above it.
-		label {
-			p:after { content: $menu-symbol-code; } // Set the menu symbol
-			cursor: pointer;
-		}
-	}
-
-	// The dividers should run accross the entire window. Note that they are not always visible, that depends on the active layout.
-	.nav-top-divider { width: 100%; }
-	.nav-bottom-divider { width: 100%; }
-	
-	// The menu is always the entire width.
-	.navbanner-menu { width: 100%; }
-	
-	@include narrow-layout {
-
-		// Override visibility of the label 
-		@if ($navbanner-include-banner == false) { .navbanner-label, .navbanner-title { display: flex; } }
-
-		// Disabled items.
-		.navbanner-menu, .nav-bottom-divider, input, .menu-item-separator { display: none; }
-		
-		// Conditionally visible/invisible items (conditionally on the invisible checkbox, i.e. menu symbol)
-		input:checked ~ {
-		
-			// Display the menu only when the menu-checkbox (invisible) is checked.
-			.navbanner-menu { display: block; }
-			
-			// Do not display the top divider when the menu is visible.
-			.nav-top-divider { display: none; }
-		}
-
-		// Only visible when the menu symbol invisible checkbox is selected
-		.navbanner-menu {
-		
-			// For the top level list (menu) items
-			li {
-
-				// Disable submenu by default
-				ul { display: none; }
-
-				// When the submenu is closed, show the appropriate symbol
-				label .menu-item .menu-item-symbol p:after { content: $menu-closed-submenu-code; }
-
-				// If the checkbox is checked
-				input:checked ~ {
-
-					// Show submenu
-					ul { display: block; }
-
-					// When the submenu is open, show the appropriate symbol
-					label .menu-item .menu-item-symbol p:after { content: $menu-open-submenu-code; }
-				}
-
-				// Ensure that the whole width and height of a link is clickable
-				a { display: block; }	
-			}
-
-			// Use the flex layout for the menu items
-			.menu-item, .menu-subitem {
-			
-				display: flex;
-				flex-direction: row;
-
-				// Align all items in the center
-				align-items: center;
-
-				// Fix the display property for the menu item symbol and title area's when a <p> is included
-				.menu-item-symbol { p { display: inline; } }
-		
-				// The symbol area does not grow
-				.menu-item-symbol, .menu-subitem-symbol { flex-grow: 0; width: 3 * $hspacing-unit; }
-
-				// The title area must grow
-				.menu-item-title, .menu-subitem-title { flex-grow: 1; }
-			}
-		}
-	}
-
-	@include medium-layout {
-
-		// Disabled items
-		.navbanner-menu, input, .menu-item-symbol, .menu-subitem-symbol, .nav-bottom-divider { display: none; }
-
-		
-		// Conditional visibility of the menu bar		
-		@if ($navbanner-include-banner == false) {
-				
-			// Display the menu because the input checkbox (label) in the banner is never visible.
-			.navbanner-menu {
-			
-				// Use flex to enable alignment of the top level menu items
-				display: flex;
-				flex-direction: row;
-				flex-wrap: wrap;
-				justify-content: $menu-alignment;
-			}
-			
-			// Also display the bottom divider when the menu is visible.
-			.nav-bottom-divider { display: inline; }
-		}
-		@else {
-		
-			// Conditionally visible/invisible items (conditionally on the invisible checkbox, i.e. menu symbol)
-			input:checked ~ {
-		
-				// Display the menu only when the menu-checkbox (invisible) is checked.
-				.navbanner-menu {
-			
-					// Use flex to enable alignment of the top level menu items
-					display: flex;
-					flex-direction: row;
-					flex-wrap: wrap;
-					justify-content: $menu-alignment;
-				}
-			
-				// Also display the bottom divider when the menu is visible.
-				.nav-bottom-divider { display: inline; }
-			}
-		}
-
-		.navbanner-menu {
-
-			// Create a left and right spacing
-			border-left: ($navbar-side-margin - ($navbar-menu-item-spacing / 2)) solid transparent;
-			border-right: $navbar-side-margin solid transparent;
-
-			// Menu item spacing
-			.menu-item {
-				border-left: ($navbar-menu-item-spacing / 2) solid transparent;
-				border-right: ($navbar-menu-item-spacing / 2) solid transparent;
-			}
-			.menu-item-separator p:after { content: $menu-item-separator; }
-
-			// This menu is horizontal
-			.menu-item, .menu-item-separator, .menu-item-title, menu-subitem-title {
-				display: inline;
-				p { display: inline; } // Keeps the labels in-line with the links
-			}
-			
-			ul {
-				li {
-					// This menu is horizontal
-					display: inline-block;
-					
-					// The submenu display
-					ul {
-						display: none; // Initially disabled
-						position: absolute; // Display the submenu below the corresponding menu item
-						li { display: block; } // Makes the submenu vertical
-					}
-
-					// Display the submenu if the user hovers the mouse over it
-					&:hover ul { display: block; }
-
-					// Display the submenu if the user taps the corresponding menu item
-					input:checked ~ ul { display: block; }
-				}
-			}
-		}
-	}
-
-	@include wide-layout {
-
-		// Do not show the checkbox label, the input(s) and the menu symbols
-		.navbanner-label, input, .menu-item-symbol { display: none; }
-		
-		.navbanner-menu {
-		
-			// Use flex to enable alignment of the top level menu items
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: $menu-alignment;
-
-			// Create a left and right spacing
-			border-left: ($navbar-side-margin - ($navbar-menu-item-spacing / 2)) solid transparent;
-			border-right: $navbar-side-margin solid transparent;
-			
-			// Menu item spacing
-			.menu-item {
-				border-left: ($navbar-menu-item-spacing / 2) solid transparent;
-				border-right: ($navbar-menu-item-spacing / 2) solid transparent;
-			}
-			.menu-item-separator p:after { content: $menu-item-separator; }
-
-			// This menu is horizontal
-			.menu-item, .menu-item-separator, .menu-item-title, menu-subitem-title {
-				display: inline;
-				p { display: inline; }
-			}
-
-			ul {
-				li {
-					
-					// This menu is horizontal
-					display: inline-block;
-					
-					// The submenu display
-					ul {
-						display: none; // Initially disabled
-						position: absolute; // Display the submenu below the corresponding menu item
-						li { display: block; } // Makes the submenu vertical
-					}
-
-					// Display the submenu if the user hovers the mouse over it
-					&:hover ul { display: block; }
-
-					// Display the submenu if the user taps the corresponding menu item
-					input:checked ~ ul { display: block; }
-				}
-			}
-		}
-	}
-}
-
-
-// The fixed panel remains in place when scrolling. In this panel the medium and wide layout are identical and the menu in medium is always visible.
-// Wrap of the menu items is prevented because that would cause problems as it would cause overlap of the content of the column panel wit the second row of the menu.
-.navbanner-panel-fixed {
-	
-	// Fix the panel to the top of the screen
-	position: fixed;
-	top: 0;
-	width: 100%;
-	
-	// Use the flex layout rules.
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-
-	// The size of the title depends on the width of the window.
-	.navbanner-title {
-	
-		// The title area should take up all space not used by the menu label.
-		flex-grow: 1;
-
-		// Center the title if visible
-		@if ($navbanner-include-banner == true) { display: flex; } @else { display: none }
-		justify-content: center;
-		align-items: center;
-	}
-
-	// The menu label is only visible in narrow and medium layout.
+	// The menu label is only visible in narrow layout.
 	.navbanner-label {
 		
 		// Never grow the menu label (symbol)
@@ -393,7 +138,7 @@
 					.dropdown { display: flex; }
 
 					// When the submenu is open, show the appropriate symbol
-					.title .symbol .code:after { content: $menu-open-submenu-code; }
+					.title .symbol .code:after { content: $menubar-item-title-symbol-code-open-narrow; }
 				}
 
 				.title {
@@ -412,7 +157,10 @@
 						align-items: center;
 						
 						// Load the disclosure symbol for the closed state
-						.code:after { content: $menu-closed-submenu-code; }
+						.code:after { content: $menubar-item-title-symbol-code-closed-narrow; }
+				
+						// Show a clickable symbol over the disclosure symbol
+						.code { cursor: pointer; }
 					}
 					
 					.text {
@@ -464,39 +212,60 @@
 		}
 	}
 
-	@include medium-layout {
+	@include medium-and-wide-layout {
 
 		// Do not show the checkbox label, the input(s) and the menu symbols
 		.navbanner-label, input, .symbol { display: none; }
 		
 		.menubar {
 		
-			// Use flex to enable alignment of the top level menu items
+			// Layout
 			display: flex;
+			width: 100%; // Ensures that the full width is used despite using flex.
 			flex-direction: row;
 			flex-wrap: nowrap;
 			justify-content: $menubar-justify-content;
-
+			
 			// Appearances
 			background-color: $menubar-background-color;
-			padding: $menubar-padding-medium;
 			border: $menubar-border;
 			box-shadow: $menubar-box-shadow;
+			@include medium-layout {
+				padding: $menubar-padding-medium;
+			}
+			@include wide-layout {
+				padding: $menubar-padding-wide;
+			}
 			
 			.separator {
 	
-				// Set padding
-				padding: $menubar-separator-padding-medium;
-	
-				// Set the separator symbol
-				p:after { content: $menubar-separator-symbol-medium; }
-
-				// The font for the separator
-				p { font: $menubar-separator-font-medium; }
-
 				// Color it
 				color: $menubar-separator-color;
 				background-color: $menubar-separator-background-color;
+
+				@include medium-layout {
+				
+					// Set padding
+					padding: $menubar-separator-padding-medium;
+	
+					// Set the separator symbol
+					p:after { content: $menubar-separator-symbol-medium; }
+
+					// The font for the separator
+					p { font: $menubar-separator-font-medium; }
+				}
+				
+				@include wide-layout {
+				
+					// Set padding
+					padding: $menubar-separator-padding-wide;
+	
+					// Set the separator symbol
+					p:after { content: $menubar-separator-symbol-wide; }
+
+					// The font for the separator
+					p { font: $menubar-separator-font-wide; }
+				}
 			}
 			
 			// Make all p's as small as possible
@@ -522,11 +291,22 @@
 				// Remove the link underlining
 				a { text-decoration: none; }
 
-				// Sizing of the items
-				a, .paddingAsLink { padding: $menubar-item-padding-medium;}
+				@include medium-layout {
+				
+					// Sizing of the items
+					a, .paddingAsLink { padding: $menubar-item-padding-medium;}
+					
+					// Font for the item text
+					p { font: $menubar-item-font-medium; }
+				}
+				@include wide-layout {
 
-				// Font for the item text
-				p { font: $menubar-item-font-medium; }
+					// Sizing of the items
+					a, .paddingAsLink { padding: $menubar-item-padding-wide;}
+
+					// Font for the item text
+					p { font: $menubar-item-font-wide; }
+				}
 
 				// Display the submenu if the user hovers the mouse over it
 				&:hover .dropdown { display: block; }
@@ -539,6 +319,9 @@
 					// Visibility depends on hovering over the item
 					display: none;
 
+					// Don't show the separators
+					.separator { display: none; }
+					
 					// Keep the size of the item unaffected by the subitems
 					position: absolute;
 						
@@ -555,124 +338,25 @@
 							p { color: $menubar-subitem-hover-color; }
 							background-color: $menubar-subitem-background-hover-color;
 						}
+						
+						@include medium-layout {
+						
+							// Sizing of the subitems
+							a, .paddingAsLink { padding: $menubar-subitem-padding-medium; }
 							
-						// Sizing of the subitems
-						a, .paddingAsLink { padding: $menubar-subitem-padding-medium; }
-							
-						// Font for subitem text
-						p { font: $menubar-subitem-font-medium; }
-					}
-
-					// Show selection for pages that match a menu entry
-					.isActiveSelection { background-color: $menubar-subitem-active-selection-background-color; }
-				}
-			}
-			
-			// Show selection for pages that match a menu entry
-			.isActiveSelection { background-color: $menubar-item-active-selection-background-color; }
-		}
-	}
-
-	@include wide-layout {
-
-		// Do not show the checkbox label, the input(s) and the menu symbols
-		.navbanner-label, input, .symbol { display: none; }
-		
-		.menubar {
-		
-			// Use flex to enable alignment of the top level menu items
-			display: flex;
-			flex-direction: row;
-			flex-wrap: nowrap;
-			justify-content: $menubar-justify-content;
-
-			// Appearances
-			background-color: $menubar-background-color;
-			padding: $menubar-padding-wide;
-			border: $menubar-border;
-			box-shadow: $menubar-box-shadow;
-			
-			.separator {
-
-				// Set padding
-				padding: $menubar-separator-padding-wide;
-	
-				// Set the separator symbol
-				p:after { content: $menubar-separator-symbol-wide; }
-				
-				// The font for the separator
-				p { font: $menubar-separator-font-wide; }
-
-				// Color it
-				color: $menubar-separator-color;
-				background-color: $menubar-separator-background-color;
-			}
-			
-			// Make all p's as small as possible
-			p { margin: 0; padding: 0; }
-						
-			.item {
-			
-				// Vertical layout
-				display: flex;
-				flex-direction: column;
-						
-				// Hover effect
-				p { color: $menubar-item-color; }
-				background-color: $menubar-item-background-color;
-				&:hover {
-					p { color: $menubar-item-hover-color; }
-					background-color: $menubar-item-background-hover-color;
-				}
-				
-				// Make the entire hightlight block clickable
-				a {	display: block; }
-				
-				// Remove the link underlining
-				a { text-decoration: none; }
-				
-				// Sizing of the items
-				a, .paddingAsLink { padding: $menubar-item-padding-wide;}
-				
-				// Font for the item text
-				p { font: $menubar-item-font-wide; }
-
-					
-				// Display the submenu if the user hovers the mouse over it
-				&:hover .dropdown { display: block; }
-
-				// Display the submenu if the user taps the corresponding menu item
-				input:checked ~ .dropdown { display: block; }					
-
-				.dropdown {
-					
-					// Visibility depends on hovering over the item
-					display: none;
-					
-					// Keep the size of the item unaffected by the subitems
-					position: absolute;
-						
-					// Appearances
-					border: $menubar-dropdown-border;
-					box-shadow: $menubar-dropdown-box-shadow;
-
-					.subitem {
-						
-						// Hover effect
-						p {	color: $menubar-subitem-color; }
-						background-color: $menubar-subitem-background-color;
-						&:hover {
-							p {	color: $menubar-subitem-hover-color; }
-							background-color: $menubar-subitem-background-hover-color;
+							// Font for subitem text
+							p { font: $menubar-subitem-font-medium; }
 						}
-							
-						// Sizing of the subitems
-						a, .paddingAsLink { padding: $menubar-subitem-padding-wide; }
-
-						// Font for the subitem text
-						p { font: $menubar-subitem-font-wide; }
-					}
+						@include wide-layout {
 						
+							// Sizing of the subitems
+							a, .paddingAsLink { padding: $menubar-subitem-padding-wide; }
+							
+							// Font for subitem text
+							p { font: $menubar-subitem-font-wide; }
+						}
+					}
+
 					// Show selection for pages that match a menu entry
 					.isActiveSelection { background-color: $menubar-subitem-active-selection-background-color; }
 				}
@@ -685,7 +369,19 @@
 }
 
 
+// This bit of CSS is needed to fix the banner and menubar in place at the top of the screen.
+//
+.navbanner-panel-fixed-menubar {
+
+	// Fix the menu and banner bar to the top of the screen
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+
+
 // The layout for the column panel uses flex, but lays out the columns either column or row based depending on the size of the window (screen).
+//
 .column-panel {
 
 	// Use flex, layout as a row or column, based on the screenwidth
@@ -743,7 +439,8 @@
 
 
 // Add top margins for when the navbanner is fixed at the top of the screen. This prevents the content of the column panels from being placed behind the navbanner.
-.column-panel-fixed {
+//
+.column-panel-fixed-menubar {
 	
 	@include narrow-layout {
 		margin-top: $narrow-banner-height + $narrow-menu-height;
