pre banner change

--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -4,16 +4,16 @@
 	<p class="site-title-text">{{ site.title }}</p>
 </div>
 
-<!-- The menu symbol will only be shown on narrow and medium layout -->
+<!-- The menu symbol will only be shown on narrow layout -->
 <div class="navbanner-label">
 	<label for="menu-checkbox"><p><!-- empty but necessary! --></p></label> 
 </div>
 <input type="checkbox" id="menu-checkbox">
 
-<!-- Separator between banner and navigation bar. Visibility depends on screen width. -->
-<div class="nav-top-divider"></div>
+<!-- Separator between banner and navigation bar -->
+<div class="menubar-separator-top"></div>
 
-<!-- Navigation bar visibility depends on screen width. -->
+<!-- Navigation bar visibility depends on screen width -->
 <nav class="menubar">
 
 	<!-- Create a list of top menu item titles -->
@@ -269,5 +269,5 @@
 	{% endif %}
 </nav>
 
-<!-- Separator between navigation bar and column panel. Visibility depends on screen width. -->
-<div class="nav-bottom-divider"></div>
+<!-- Separator between menubar and column panel -->
+<div class="menubar-separator-bottom"></div>
